--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.1",
     "webpack-node-externals": "^1.7.2",
+    "xss": "^1.0.6",
     "xss-filters": "^1.2.7"
   }
 }
